# Spanish_App

./: .gitignore  CMakeLists.txt  README.md  Spanish_Verbs.sln
.github/workflows/: Code_quality.yml  c-cpp.yml  pipeline.yml
Spanish_Verbs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Future_Tense_Simple.hpp  INSTALL.vcxproj  INSTALL.vcxproj.filters  Imperfect_Tense.cpp  Imperfect_Tense.hpp  Indefinite_Tense.hpp  Numbers.hpp  Present_Tense.cpp  Present_Tense.hpp  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Spanish_App.vcxproj  Spanish_App.vcxproj.filters  Spanish_EXE.vcxproj  Spanish_EXE.vcxproj.filters  Spanish_Verbs.cpp  Spanish_Verbs.hpp  Spanish_Verbs.sln  Spanish_Verbs.vcxproj  Spanish_Verbs.vcxproj.filters  Subjunctive_Present.cpp  Subjunctive_Present.hpp  Verbs_Infinitive.hpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Spanish_Verbs/inc/: Dialog.hpp  Future_Tense_Simple.hpp  Imperfect_Tense.hpp  Indefinite_Tense.hpp  Numbers.hpp  Present_Continous.hpp  Present_Tense.hpp  Pronouns.hpp  Subjunctive_Present.hpp  Verbs_Infinitive.hpp
Spanish_Verbs/src/: CMakeLists.txt  CTestTestfile.cmake  Dialog.cpp  Future_Tense_Simple.cpp  INSTALL.vcxproj  INSTALL.vcxproj.filters  Imperfect_Tense.cpp  Indefinite_Tense.cpp  Present.vcxproj  Present.vcxproj.filters  Present_Continuous.cpp  Present_Tense.cpp  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Spanish_Verbs.cpp  Subjunctive_Present.cpp  cmake_install.cmake
Spanish_Verbs/tst/: CMakeLists.txt  test_Present_Tense_UT.cpp
inc/: Future_Tense_Simple.hpp  Imperfect_Tense.hpp  Indefinite_Tense.hpp  Present_Continous.hpp  Present_Tense.hpp  Pronouns.hpp  Subjunctive_Present.hpp
inc/conjugation/: ConjugationStrategy.hpp  PresentTenseStrategy.hpp
inc/core/: SpanishVerb.hpp
inc/util/: String_Helper.hpp
src/: Future_Tense_Simple.cpp  Imperfect_Tense.cpp  Indefinite_Tense.cpp  Present_Continuous.cpp  Present_Tense.cpp  Pronouns.cpp  Spanish_Verbs.cpp  Subjunctive_Present.cpp
src/conjugation/: ConjugationStrategy.cpp  PresentTenseStragetgy.cpp
src/core/: SpanishVerb.cpp
tst/: CMakeLists.txt  Test_Present_Tense.cpp
